<resources>
    <string name="app_name">Quiz Blaster</string>
    <string name="score_0">Score: 0</string>
    <string name="question_1_x">Question: 1/x</string>
    <string name="_00_30">00:30</string>
    <string name="qustion">Here will be the question text\nHere will be the question text\nHere will be the question text</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="confirm">Confirm</string>
    <!--This app is created by Aditya J -->
</resources>
